--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
+    "start": "$(npm bin)/gulp",
+    "build": "$(npm bin)/gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
